--- a/src/TechJobs/Views/List/Jobs.cshtml
+++ b/src/TechJobs/Views/List/Jobs.cshtml
@@ -5,3 +5,22 @@
 @{ 
     // TODO #3 - Use the same list display from Views/Search/Index.cshtml 
 }
+
+@for (int job = 0; job < ViewBag.jobs.Count; job++) //list of dictionary
+{
+    int count = 0;  // counter for alternating row colors
+
+    <table class="job-listing">
+        @foreach (KeyValuePair<string, string> item in ViewBag.jobs[job])  //single dictionary item
+        {
+            <tr>
+                <td>@item.Key</td>
+                <td>@item.Value</td>
+            </tr>
+
+            count++;
+        }
+    </table>
+}
+
+@*class="@( count % 2 == 0 ? "even" : "odd" ) "*@
