--- a/src/TechJobs/Views/Search/Index.cshtml
+++ b/src/TechJobs/Views/Search/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<h1>@ViewBag.title</h1>
+﻿
+
+<h1>@ViewBag.title</h1>
 
 <form action="/Search/Results">
     <h2>Search by:</h2>
@@ -10,8 +12,9 @@
                 <input type="radio"
                        name="searchType"
                        id="@column.Key"
-                       value="@column.Key" 
-                       checked="@column.Key == 'all''"/>
+                       value="@column.Key"
+                       checked="@column.Key == 'all'" />
+                
                 <label for="@column.Key">@column.Value</label>
             </span>
         }
@@ -32,5 +35,22 @@
 
     <h3>@ViewBag.jobs.Count Result(s)</h3>
 
-    // TODO #2 - Loop over jobs dictionary and display all job fields 
+    // TODO #2 - Loop over jobs dictionary and display all job fields
+
+    @for(int job = 0; job < ViewBag.jobs.Count; job++) //list of dictionary
+    {
+        int count = 0;  // counter for alternating row colors
+
+        <table class="job-listing">
+            @foreach (KeyValuePair<string, string> item in ViewBag.jobs[job])  //single dictionary item
+            {
+                <tr>
+                    <td>@item.Key</td>
+                    <td>@item.Value</td>
+                </tr>
+
+                count++;
+            }
+        </table>
+    }
 }
